--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 carpentry: "rcs"
 
 # Overall title for pages.
-title: "Using Git to Code, Collaborate and Share"
+title: "Intermediate Git and GitHub for Effective Collaboration"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
