--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -1,4 +1,4 @@
-name: Check links in Markdown files
+name: Check links in files
 on:
   schedule:
     - cron: 0 0 * * 1 # midnight every Monday
@@ -9,11 +9,13 @@ on:
 
 jobs:
   check-links:
+    name: Run Linkspector
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      - name: Run linkspector
+        uses: umbrelladocs/action-linkspector@v1
         with:
-          use-quiet-mode: yes
-          use-verbose-mode: yes
-          config-file: .markdown-link-check.json
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
+          fail_on_error: true
