--- a/handouts/Makefile
+++ b/handouts/Makefile
@@ -1,9 +1,9 @@
 .PHONY: all
 
-all: handout-lesson1.pdf handout-lesson2.pdf
+all: handout.pdf
 
 clean:
-	rm -f handout-lesson1.pdf handout-lesson2.pdf
+	rm -f handout.pdf
 
 %.pdf: %.tex common.tex
 	docker run --rm -it -v ${CURDIR}:/mnt/ adnrv/texlive:latest bash -xc "cp /mnt/*.tex /tmp/; pdflatex --output-directory=/tmp -interaction=nonstopmode /tmp/$<; chown $$(id -u):$$(id -g) /tmp/$@; mv /tmp/$@ /mnt/"
