Rename: handout.tex => git-course-handout.tex

--- a/handouts/Makefile
+++ b/handouts/Makefile
@@ -1,9 +1,9 @@
 .PHONY: all
 
-all: handout.pdf
+all: git-course-handout.pdf
 
 clean:
-	rm -f handout.pdf
+	rm -f git-course-handout.pdf
 
 %.pdf: %.tex common.tex
 	docker run --rm -it -v ${CURDIR}:/mnt/ adnrv/texlive:latest bash -xc "cp /mnt/*.tex /tmp/; pdflatex --output-directory=/tmp -interaction=nonstopmode /tmp/$<; chown $$(id -u):$$(id -g) /tmp/$@; mv /tmp/$@ /mnt/"
