--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Build handout sheet
+        run: make handouts
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Build
